Update stay_or_go action: make 'mode' input required, add 'output_path' and 'min_score' inputs, and implement score threshold check in entrypoint script

--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -17,8 +17,7 @@ jobs:
 
       - name: Prepare dummy workdir
         run: |
-          mkdir -p target
-          cat > target/go.mod <<'EOF'
+          cat > go.mod <<'EOF'
           module dummy
           go 1.25
           require github.com/sirupsen/logrus v1.9.0
