--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,8 +19,10 @@ jobs:
 
       - name: Build image
         run: |
-          IMAGE=ghcr.io/konyu/action_stay_or_go:${GITHUB_REF_NAME}
-          IMAGE_MAJOR=ghcr.io/konyu/action_stay_or_go:v1
+          TAG=${GITHUB_REF_NAME}
+          MAJOR_TAG=${TAG%%.*} # v1.x.x -> v1
+          IMAGE=ghcr.io/konyu/action_stay_or_go:${TAG}
+          IMAGE_MAJOR=ghcr.io/konyu/action_stay_or_go:${MAJOR_TAG}
           docker build \
             --build-arg GO_VERSION=${{ steps.gover.outputs.ver || '1.25' }} \
             -t "${IMAGE}" \
@@ -32,5 +34,7 @@ jobs:
 
       - name: Push
         run: |
-          docker push ghcr.io/konyu/action_stay_or_go:${GITHUB_REF_NAME}
-          docker push ghcr.io/konyu/action_stay_or_go:v1
+          TAG=${GITHUB_REF_NAME}
+          MAJOR_TAG=${TAG%%.*}
+          docker push ghcr.io/konyu/action_stay_or_go:${TAG}
+          docker push ghcr.io/konyu/action_stay_or_go:${MAJOR_TAG}
